--- a/Python_Task.ipynb
+++ b/Python_Task.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python Task.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP28gTFv5N/jzJpkjPMGN68",
+      "authorship_tag": "ABX9TyNPqwpl6r24n0YB8JlGAWRe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,54 +66,15 @@
         "def email_extractor(email_list, host_name):\n",
         "  \"\"\"Output an email address with a specific hostname\"\"\"\n",
         "  for email in email_list:\n",
-        "    if host_name == email.split('@') + 1:\n",
+        "    if host_name == email.split('@') [+1]:\n",
         "      return(host_name)\n",
         "email_list= ['joyfloyd2@hotmail.com', 'jb23forever@yahoo.com', 'adesade4@gmail.com', 'bimpeadeola@gmail.com', 'harunaika@yahoo.com', 'chikaoluchi@gmail.com', 'sweetheart4eva@hotmail.com', 'fionashrek@gmail.com', 'peace_goodness@hotmail.com', 'edumd@yahoo.com']\n",
-        "\n",
-        "email_extractor(email_list, \"yahoo.com\")"
+        "\n"
       ],
       "metadata": {
-        "id": "quNd_kYK6xXU",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 392
-        },
-        "outputId": "97fa42c7-6c65-4a24-9396-da7ae862cff1"
+        "id": "quNd_kYK6xXU"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-69-3bdaaa0326b6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0memail_list\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'joyfloyd2@hotmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'jb23forever@yahoo.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'adesade4@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'bimpeadeola@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'harunaika@yahoo.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'chikaoluchi@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sweetheart4eva@hotmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'fionashrek@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'peace_goodness@hotmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'edumd@yahoo.com'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0memail_extractor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memail_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"yahoo.com\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-69-3bdaaa0326b6>\u001b[0m in \u001b[0;36memail_extractor\u001b[0;34m(email_list, host_name)\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;34m\"\"\"Output an email address with a specific hostname\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0memail\u001b[0m \u001b[0;32min\u001b[0m \u001b[0memail_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mhost_name\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0memail\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'@'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m       \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0memail_list\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'joyfloyd2@hotmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'jb23forever@yahoo.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'adesade4@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'bimpeadeola@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'harunaika@yahoo.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'chikaoluchi@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'sweetheart4eva@hotmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'fionashrek@gmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'peace_goodness@hotmail.com'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'edumd@yahoo.com'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "-8SVdUtMuQuz"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "9EiheLZlt-rr"
-      },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
