--- a/Python_Task.ipynb
+++ b/Python_Task.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python Task.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPqwpl6r24n0YB8JlGAWRe",
+      "authorship_tag": "ABX9TyO0u2/mfEz69QfipnmQ4YFw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "source": [
         "# Return a new set of identical items from set1 & set2\n",
         "def intersection_list(set1,set2):\n",
-        "  return set(set1).intersection(set2)\n",
+        "  return (set1).intersection(set2)\n",
         "\n",
         "set1 = {10, 20, 30, 40, 50}\n",
         "set2 = {30, 40, 50, 60, 70}\n",
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0iHkIq7qzeen",
-        "outputId": "e7e13f44-1e9c-4754-f24f-34ec853897e4"
+        "outputId": "5975c30f-0f06-41db-c0dd-ebe008555591"
       },
       "execution_count": null,
       "outputs": [
@@ -53,6 +53,42 @@
           "name": "stdout",
           "text": [
             "{40, 50, 30}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#  Create a function that counts the number of elements within a list that are greater than 30 and outputs a custom message with the count. The function should return the numbers that meet the condition.\n",
+        "\n",
+        "counter= [1, 4, 62, 78, 32, 23, 90, 24, 2, 34, 28, 18, 12, 64, 50, 11, -1, 0, 30]\n",
+        "m = [ num for num in counter if num > 30]\n",
+        "print(\"There are \" + str(len(m))+ \" \" + \"numbers greater than 30 in the counter list. \\nThese are the numbers:\" + str(m)[1:-1])\n",
+        "# str(list)[1:-1] removes the square brackets in the list\n",
+        "print(m)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xJp_1enUNQMF",
+        "outputId": "15ea4dea-1576-46d3-9941-376d1faa21e5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 7 numbers greater than 30 in the counter list. \n",
+            "These are the numbers:62, 78, 32, 90, 34, 64, 50\n",
+            "[62, 78, 32, 90, 34, 64, 50]\n"
           ]
         }
       ]
@@ -74,7 +110,7 @@
       "metadata": {
         "id": "quNd_kYK6xXU"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,30 +163,77 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
         "\n",
-        "def counter(test_list):\n",
+        "Build an app that can raise invoices for each customer that makes an order\n",
+        "We have a store that sells scarfs in large quantities. They have different types of scarf\n",
+        "Red scarfs go for ₦500 per unit\n",
+        "Blue scarfs go for ₦750 per unit\n",
+        "White scarfs go for ₦800 per unit\n",
+        "Our application should work as follows:\n",
+        "Get customer information through user input\n",
+        "customer name, \n",
         "\n",
-        "  n_counter = 0\n",
-        "  m = []\n",
-        "  for n in test_list:\n",
-        "    if n > 30:\n",
-        "      n_counter+=1\n",
-        "      m.append(n)\n",
-        "      print(m)\n",
-        "      print(\"{} is the number of counts greater than 30\".format(n_counter))\n",
+        "1.   customer name, \n",
         "\n",
-        "counter([1, 4, 62, 78, 32, 23, 90, 24, 2, 34, 28, 18, 12, 64, 50, 11, -1, 0, 30])\n",
-        "  \n",
-        "  "
+        "2.   Scarf colour\n",
+        "\n",
+        "3.   order quantity per scarf\n",
+        "\n",
+        "4.   date order was made\n",
+        "\n",
+        "5. The customer name should be properly cleaned and processed to ensure that it's in the title case (strip all white spaces)\n",
+        "\n",
+        "6. The customer's total spending for that order should be calculated.\n",
+        "Your app should then generate the customer’s invoice.\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "G_Ri1c3pxdpY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import date\n",
+        "today= date.today()\n",
+        "\n",
+        "redScarves= 500\n",
+        "blueScarves= 700\n",
+        "whiteScarves= 850\n",
+        "\n",
+        "def invoice():\n",
+        "  print(\"Name of Customer\")\n",
+        "  customer= input(\"Enter Customer's name: \")\n",
+        "\n",
+        "  customer_title= \" \".join(customer.split()).title()\n",
+        "  # It combines split() + join() to remove additional space from string \n",
+        "\n",
+        "  print(\"Number of Red Scarves: \")\n",
+        "  num_redScarves= int(input())\n",
+        "\n",
+        "  print(\"Number of Blue Scarves: \")\n",
+        "  num_blueScarves= int(input())\n",
+        "\n",
+        "  print(\"Number of White Scarves: \")\n",
+        "  num_whiteScarves= int(input())\n",
+        "\n",
+        "  order_Price = (redScarves * num_redScarves) + (blueScarves * num_blueScarves) + (whiteScarves * num_whiteScarves)\n",
+        "  current_Date_Formated = today.strftime(\"%b \" + \"%d, \" + \"%Y\")  #It formats today to get the name of the month, the day of the month and the current year\n",
+        "    \n",
+        "  print(\"Name: \" + customer_title + \" \\nRed scarf: \" + str(num_redScarves) + \" \\nBlue scarf: \" + str(num_blueScarves) + \" \\nWhite scarf: \" + str(num_whiteScarves) + \" \\nOrder price: ₦\" + str(order_Price) + \" \\nDate ordered: \" + current_Date_Formated)    \n",
+        "\n",
+        "invoice()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "nIE658fXF0C8",
-        "outputId": "de61069b-d05c-44ca-fa54-1c46727fb021"
+        "id": "Msd1Yu-hUCgP",
+        "outputId": "516f9f9d-cbc9-4f59-a76b-c1a4afb1b154"
       },
       "execution_count": null,
       "outputs": [
@@ -158,102 +241,74 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[62]\n",
-            "1 is the number of counts greater than 30\n",
-            "[62, 78]\n",
-            "2 is the number of counts greater than 30\n",
-            "[62, 78, 32]\n",
-            "3 is the number of counts greater than 30\n",
-            "[62, 78, 32, 90]\n",
-            "4 is the number of counts greater than 30\n",
-            "[62, 78, 32, 90, 34]\n",
-            "5 is the number of counts greater than 30\n",
-            "[62, 78, 32, 90, 34, 64]\n",
-            "6 is the number of counts greater than 30\n",
-            "[62, 78, 32, 90, 34, 64, 50]\n",
-            "7 is the number of counts greater than 30\n"
+            "Name of Customer\n",
+            "Enter Customer's name: c\n",
+            "Number of Red Scarves: \n",
+            "78\n",
+            "Number of Blue Scarves: \n",
+            "9\n",
+            "Number of White Scarves: \n",
+            "7\n",
+            "Name: C \n",
+            "Red scarf: 78 \n",
+            "Blue scarf: 9 \n",
+            "White scarf: 7 \n",
+            "Order price: ₦51250 \n",
+            "Date ordered: Jan 11, 2022\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def counter(test_list):\n",
-        "      n_counter = 0\n",
-        "      m = []\n",
-        "      for n in test_list:\n",
-        "          if n > 30:\n",
-        "              n_counter+=1\n",
-        "              m.append(n)\n",
-        "              print(m)\n",
-        "              print(\"{} is the number of counts greater than 30\".format(n_counter))"
+        "Write a Python program that prints all the numbers from 0 to 20 except even numbers\n"
       ],
       "metadata": {
-        "id": "aYTcNBNlrABe"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "customer_name= str(input(\"Enter name:\"))\n",
-        "Customer_title= customer_name.title()\n",
-        "unit1= int(input(\"Enter number of Red scarves\"))\n",
-        "unit2= int(input(\"Enter number of blue scarves\"))\n",
-        "unit3= int(input(\"Enter number of white scarves\"))\n",
-        "red_price= 500*unit1\n",
-        "blue_price= 750*unit2\n",
-        "white_price= 800*unit3\n",
-        "Total_spent= (red_price + blue_price + white_price)\n",
-        "date= input('Enter Date of purchase:')\n",
-        "date_title= date.title()\n",
-        "\n",
-        "invoice= 'Name: {} \\n {} Red scarves \\n {} Blue Scarves\\n {} White Scarves\\n Total order: {} \\n Date: {}'.format(Customer_title,unit1,unit2,unit3,Total_spent,date_title)\n",
-        "print(invoice)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9ak0O6J1Uxuo",
-        "outputId": "81cc3c44-262c-4591-9174-129570d33790"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter name:jahn\n",
-            "Enter number of Red scarves4\n",
-            "Enter number of blue scarves5\n",
-            "Enter number of white scarves9\n",
-            "Enter Date of purchase:10/2/2022\n",
-            "Name: Jahn \n",
-            " 4 Red scarves \n",
-            " 5 Blue Scarves \n",
-            "  9 White Scarves\n",
-            " Total order: 12950 \n",
-            " Date: 10/2/2022\n"
-          ]
-        }
-      ]
+        "id": "Da4y_s38yTYZ"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "num= range(21)\n",
         "for i in num:\n",
+        "  # loop iterates through the numbers 0 to 21\n",
         "  if (i % 2 != 0):\n",
-        "    print(i, end=\" \")"
+        "    # if i is has a remainder that is not equal to 0 its an odd number\n",
+        "    print(i, end=\" \")\n",
+        "    # print the odd number"
       ],
       "metadata": {
-        "id": "jYFq5qS_YB9S"
+        "id": "jYFq5qS_YB9S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6c029b6-25f7-4f1f-8869-4ff7520496ca"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 3 5 7 9 11 13 15 17 19 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a function called fizz_buzz that takes a number.\n",
+        "1.  If the number is divisible by 3, it should return “Fizz”. \n",
+        "2. If it is divisible by 5, it should return “Buzz”.\n",
+        "3. If it is divisible by both 3 and 5, it should return “FizzBuzz”.\n",
+        "4. Otherwise, it should return the same number.\n"
+      ],
+      "metadata": {
+        "id": "CRyfyNQLy6Cp"
+      }
     },
     {
       "cell_type": "code",
@@ -292,6 +347,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Write a function for checking the speed of drivers. This function should have one parameter: speed.\n",
+        "1. if speed is less than 70km/h, it should print “Ok”.\n",
+        "2. Otherwise, for every 5km above the speed limit (70), it should give the driver one demerit point and print the total number of demerit points. For example, if the speed is 80, it should print: “Points: 2”.\n",
+        "3. If the driver gets more than 12 points, the function should print: “License suspended”\n"
+      ],
+      "metadata": {
+        "id": "8GaNRZCUz3-J"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def speed_check(speed):\n",
@@ -324,6 +391,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Write a Python program to create Fibonacci series up to ‘n’ using Lambda."
+      ],
+      "metadata": {
+        "id": "X8lmAkf_0ELI"
+      }
     },
     {
       "cell_type": "code",
